test/js/node/test/parallel/test-stream-duplex-from.js.log.txt
448 |   return _mustCallInner(fn, exact, 'exact');
449 | }
450 | 
451 | function mustSucceed(fn, exact) {
452 |   return mustCall(function(err, ...args) {
453 |     assert.ifError(err);
                 ^
AssertionError: ifError got unwanted exception: Object [AsyncGenerator] {}
 code: "ERR_ASSERTION"

      at /Users/bun/code/bun/test/js/node/test/common/index.js:453:12
      at pipelineImpl (internal:streams/pipeline:145:22)
      at node:stream/promises:8:23
      at new Promise (native:1:11)
      at pipeline (node:stream/promises:7:18)
      at /Users/bun/code/bun/test/js/node/test/parallel/test-stream-duplex-from.js:137:13
      at native:11:43
error: myCustomError
1 | (function (thisArgument)
              ^
TypeError: undefined is not a function
      at duplexify (internal:streams/duplexify:47:23)
      at /Users/bun/code/bun/test/js/node/test/parallel/test-stream-duplex-from.js:182:10
      at asyncFunctionResume (1:11)
      at promiseReactionJobWithoutPromiseUnwrapAsyncContext (1:11)
      at promiseReactionJob (1:11)

Bun v1.1.34-debug+b186f0ba7 (macOS arm64)
